<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconBackAbout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:contentDescription="@string/back_arow" />

            <TextView
                android:text="@string/about_me"
                android:layout_marginStart="60dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    tools:src ="@drawable/profile"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:id="@+id/cvProfile"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muhammad_isrim_yb"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="22sp" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isrin555dev_gmail_com"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>